style.css
/* Reset */

*{
    margin:0;
    padding:0;
    box-sizing:border-box;
}

body{
    background:
    radial-gradient(circle at top right, rgba(193,18,31,0.18), transparent 35%),
    radial-gradient(circle at bottom left, rgba(193,18,31,0.12), transparent 30%),
    #0A0A0A;

    color:white;
    font-family:'Poppins',sans-serif;
    overflow-x:hidden;
}

/* Navbar */

.navbar{
    width:90%;
    margin:auto;
    display:flex;
    justify-content:space-between;
    align-items:center;
    padding:25px 0;
}

.logo{
    font-family:'Bebas Neue',sans-serif;
    font-size:40px;
    letter-spacing:3px;
    color:#C1121F;
}

.nav-links{
    display:flex;
    list-style:none;
    gap:40px;
}

.nav-links a{
    color:white;
    text-decoration:none;
    transition:.3s;
}

.nav-links a:hover{
    color:#C1121F;
}

@media (max-width:768px){

    .navbar{
        width:100%;
        flex-direction:column;
        justify-content:center;
        align-items:center;
        padding:20px 0;
        gap:20px;
    }

    .nav-links{
        display:flex;
        flex-direction:column;
        align-items:center;
        gap:15px;
        padding:0;
        margin:0;
        width:100%;
    }

    .nav-links li{
        list-style:none;
    }

    .nav-links a{
        font-size:16px;
        color:white;
        text-decoration:none;
    }

    .logo{
        font-size:24px;
    }

}
/* Hero */

.hero{

    width:90%;
    max-width:1400px;
    margin:auto;
    min-height:90vh;

    display:flex;
    justify-content:space-between;
    align-items:center;
    gap:60px;

}

.hero-left{

    flex:1;

}
.subtitle{
    color:#C1121F;
    letter-spacing:3px;
    text-transform:uppercase;
    margin-bottom:20px;
}

.hero h1{

    font-family:'Bebas Neue',sans-serif;

    font-size:140px;

    line-height:0.9;

    letter-spacing:4px;

}

.description{
    color:#bdbdbd;
    margin:30px 0;
    width:75%;
    line-height:1.8;
}

/* Buttons */

.buttons{
    display:flex;
    gap:20px;
}

.btn-red{

    background:#C1121F;
    color:white;

    border:none;

    padding:16px 34px;

    cursor:pointer;

    border-radius:8px;

    font-size:16px;

    transition:0.3s;

    text-decoration:none;
display:inline-block;

}

.btn-outline{

    background:transparent;

    color:white;

    border:2px solid #C1121F;

    padding:16px 34px;

    cursor:pointer;

    border-radius:8px;

    font-size:16px;
     
    transition:0.3s;

    text-decoration:none;
display:inline-block;
 
}

/* Right Image */

.hero-right{

    flex:1;

    display:flex;

    justify-content:center;

    align-items:center;

}

.hero-right img{

    width:100%;
    max-width:420px;

    border-radius:25px;

    box-shadow:0 0 40px rgba(193,18,31,0.35);

}
.hero-title{
    font-size:48px;
    color:#C1121F;
    font-family:'Bebas Neue', sans-serif;
    letter-spacing:2px;
    margin-top:10px;
    margin-bottom:25px;
    line-height:1.2;
}

.btn-red:hover{

    transform:translateY(-4px);

    box-shadow:0 0 25px rgba(193,18,31,0.5);

}

.btn-outline:hover{

    background:#C1121F;

    transform:translateY(-4px);

}

.stats{

    width:90%;
    max-width:1400px;

    margin:80px auto;

    display:flex;

    justify-content:space-between;

}

.stat-box{

    width:23%;

    border:1px solid rgba(255,255,255,.08);

    padding:30px;

    border-radius:15px;

    background:#111;

    transition:.3s;

}

.stat-box:hover{

    transform:translateY(-10px);

    border-color:#C1121F;

}

.stat-box h2{

    color:#C1121F;

    font-size:36px;

}

.stat-box p{

    color:#aaa;

}

/* Featured Work */

.featured{
    width:90%;
    max-width:1400px;
    margin:100px auto;
}

.section-title{
    font-family:'Bebas Neue',sans-serif;
    font-size:60px;
    color:white;
    margin-bottom:40px;
}

.video-grid{
    display:grid;
    grid-template-columns:repeat(3,1fr);
    gap:30px;
}

.video-card{
    background:#111;
    border:1px solid rgba(255,255,255,.08);
    border-radius:20px;
    overflow:hidden;
    transition:.4s;
}

.video-card:hover{
    transform:translateY(-10px);
    border-color:#C1121F;
    box-shadow:0 0 30px rgba(193,18,31,.35);
}

.video-card img{
    width:100%;
    height:240px;
    object-fit:cover;
}

.video-card h3{
    padding:20px;
    padding-bottom:5px;
}

.video-card p{
    padding:0 20px 20px;
    color:#aaa;
}

/* Services */

.services{
    width:90%;
    max-width:1400px;
    margin:120px auto;
}

.service-grid{
    display:grid;
    grid-template-columns:repeat(2,1fr);
    gap:30px;
}

.service-card{
    background:#111;
    padding:35px;
    border-radius:18px;
    border:1px solid rgba(255,255,255,.08);
    transition:.4s;
}

.service-card:hover{
    border-color:#C1121F;
    transform:translateY(-8px);
}

.service-card h3{
    color:#C1121F;
    font-size:28px;
    margin-bottom:15px;
}

.service-card p{
    color:#bdbdbd;
    line-height:1.8;
}

/* About */

.about{
    width:90%;
    max-width:1400px;
    margin:120px auto;
    display:flex;
    gap:60px;
    align-items:center;
}

.about-left,
.about-right{
    flex:1;
}

.about-left p{
    color:#bdbdbd;
    line-height:1.8;
    margin:30px 0;
}

.about-box{
    background:#111;
    padding:30px;
    border-radius:18px;
    margin-bottom:20px;
    border:1px solid rgba(255,255,255,.08);
    transition:.3s;
}

.about-box:hover{
    border-color:#C1121F;
    transform:translateY(-8px);
}

.about-box h3{
    color:#C1121F;
    margin-bottom:10px;
}

.about-box p{
    color:#bdbdbd;
}

/* Tools Section */

.tools{
    width:90%;
    max-width:1400px;
    margin:120px auto;
    text-align:center;
}

.tools-container{
    display:flex;
    justify-content:center;
    gap:30px;
    flex-wrap:wrap;
    margin-top:50px;
}

.tool-card{
    width:220px;
    background:#111;
    padding:30px;
    border-radius:18px;
    border:1px solid rgba(255,255,255,0.08);
    transition:0.3s ease;
    cursor:pointer;
}

.tool-card:hover{
    transform:translateY(-10px);
    box-shadow:0 10px 30px rgba(193,18,31,0.25);
    border-color:#C1121F;
}

.tool-card img{
    width:80px;
    height:80px;
    object-fit:contain;
}

.tool-card h3{
    margin-top:20px;
    font-size:18px;
    color:white;
}

.projects{
    width:90%;
    max-width:1400px;
    margin:120px auto;
    text-align:center;
}

.projects-container{
    display:flex;
    justify-content:center;
    gap:30px;
    flex-wrap:wrap;
    margin-top:50px;
}

.project-card{
    width:350px;
    background:#111;
    border-radius:20px;
    overflow:hidden;
    border:1px solid rgba(255,255,255,0.08);
    padding-bottom:25px;
    transition:0.3s ease;
}

.project-card:hover{
    transform:translateY(-10px);
    box-shadow:0 10px 30px rgba(193,18,31,0.25);
    border-color:#C1121F;
}

.project-card img{
    width:100%;
    height:200px;
    object-fit:cover;
}

.project-card h3{
    margin-top:20px;
    font-size:22px;
    color:white;
}

.project-card p{
    color:#bbb;
    font-size:15px;
    line-height:1.6;
    padding:0 20px;
}

.project-btn{
    display:inline-block;
    margin-top:15px;
    padding:10px 25px;
    background:#C1121F;
    color:white;
    text-decoration:none;
    border-radius:25px;
    transition:0.3s;
}

.project-btn:hover{
    background:#e01b2f;
}

.contact{
    width:90%;
    max-width:1000px;
    margin:120px auto;
    text-align:center;
}

.contact-container{
    margin-top:40px;
}

.contact-container p{
    color:#bbb;
    font-size:18px;
    line-height:1.6;
}

.contact-btn{
    display:inline-block;
    margin-top:25px;
    padding:12px 35px;
    background:#C1121F;
    color:white;
    text-decoration:none;
    border-radius:30px;
    transition:0.3s ease;
}

.contact-btn:hover{
    transform:translateY(-3px);
    background:#e01b2f;
}


footer{
    text-align:center;
    padding:25px;
    background:#111;
    color:#aaa;
    margin-top:50px;
    font-size:14px;
}

@media (max-width: 768px){

    .navbar{
        padding:20px;
    }

    .nav-links{
        gap:15px;
    }

    .hero{
        text-align:center;
        padding:50px 20px;
    }

    .hero h1{
        font-size:35px;
    }

    .hero p{
        font-size:16px;
    }


    .about{
        flex-direction:column;
        text-align:center;
    }


    .tools{
        margin:80px auto;
    }

    .tools-container{
        flex-direction:column;
        align-items:center;
    }


    .tool-card{
        width:80%;
    }


    .projects-container{
        flex-direction:column;
        align-items:center;
    }


    .project-card{
        width:90%;
    }


    .contact{
        margin:80px auto;
        padding:20px;
    }

}

@media (max-width:768px){

    .hero{
        width:90%;
        min-height:auto;
        flex-direction:column;
        text-align:center;
        gap:40px;
        padding:40px 0;
    }

    .hero-left{
        width:100%;
    }

    .hero h1{
        font-size:55px;
        line-height:1;
    }

    .hero-title{
        font-size:35px;
    }

    .description{
        width:100%;
        font-size:15px;
        margin:20px auto;
    }

    .buttons{
        justify-content:center;
        flex-direction:column;
        align-items:center;
    }

    .btn-red,
    .btn-outline{
        width:80%;
    }

    .hero-right img{
        width:80%;
    }

}@media (max-width:768px){

    .tools,
    .projects{
        width:90%;
        margin:80px auto;
    }

    .section-title{
        font-size:42px;
    }

    .tools-container,
    .projects-container{
        flex-direction:column;
        align-items:center;
        gap:25px;
    }

    .tool-card{
        width:85%;
        padding:25px;
    }

    .project-card{
        width:90%;
    }

    .project-card img{
        height:180px;
    }

}

@media (max-width:768px){

    .contact{
        width:90%;
        margin:80px auto;
        text-align:center;
    }

    .contact-container p{
        font-size:16px;
    }

    .contact-btn{
        width:80%;
        padding:12px 20px;
    }

    footer{
        font-size:13px;
        padding:20px;
    }

}

html{
    scroll-behavior:smooth;
}

html, body{
    width:100%;
    overflow-x:hidden;
}

@media (max-width:768px){

    .hero,
    .about,
    .tools,
    .projects,
    .contact,
    .services{
        width:90%;
        margin-left:auto;
        margin-right:auto;
    }

    .hero-left,
    .hero-right{
        width:100%;
    }

    img{
        max-width:100%;
    }

}

html, body{
    width:100%;
    max-width:100%;
    overflow-x:hidden;
}

*{
    max-width:100%;
}

@media (max-width:768px){

    .navbar,
    .hero,
    .stats,
    .featured,
    .services,
    .about,
    .tools,
    .projects,
    .contact{
        width:90%;
        margin-left:auto;
        margin-right:auto;
    }

}

